# fastapi_auth

./: CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
fastapi_async_auth_kit/: __init__.py
fastapi_async_auth_kit/api/: auth.py
fastapi_async_auth_kit/core/: config.py  security.py  setup.py
fastapi_async_auth_kit/db/: base.py  factory.py  mongo_repo.py  sqlalchemy_repo.py
fastapi_async_auth_kit/dependencies/: auth.py
fastapi_async_auth_kit/schemas/: auth.py  user.py
fastapi_async_auth_kit/services/: auth_service.py
fastapi_auth/: __init__.py
fastapi_auth/api/: auth.py
fastapi_auth/core/: setup.py
fastapi_auth/db/: factory.py  mongo_repo.py  sqlalchemy_repo.py
fastapi_auth/dependencies/: auth.py
fastapi_auth/services/: auth_service.py
tests/: test_auth.py
