[project]
name = "fastapi-auth"
version = "0.2.0"
description = "FastAPI auth with refresh tokens"
authors = [{ name="Keyurkumar", email="kmistry1110@gmail.com" }]
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "pydantic",
    "python-jose",
    "argon2-cffi",
    "sqlalchemy>=2.0"
]

[project.optional-dependencies]
postgres = ["asyncpg"]
mysql = ["aiomysql"]
sqlite = ["aiosqlite"]
mongodb = ["motor"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_auth*"]